2006-12-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list.cc: create_layout_add_group(): Check that fields 
	exist before adding them as columns, to avoid SQL errors when we have failed 
	(we should not fail) to rename something everywhere.

2006-11-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc: Remove unnessary static keyword to partly fix the 
	cygwin build.

1.2.1:

2006-11-17  Murray Cumming  <murrayc@murrayc.com>

        * glom/libglom/document/document_glom.cc:
        * glom/libglom/document/document_glom.h: Added get_document_format_version()
        and get_latest_known_document_format_version().
        load_after(): Check the document format version, and fail if it is higher than
        we know about.
        save_before(): Save the document format version (as the latest known) when
        saving changes.
        * glom/frame_glom.cc: on_menu_userlevel_Developer(): When going into developer
        mode, warn that you might not be able to open the changed document with older
        versions of Glom.

2006-11-16  Murray Cumming  <murrayc@murrayc.com>

        * glom/base_db.cc: get_find_where_clause_quick():
        * glom/mode_data/box_data.cc: get_find_where_clause():
        Put quotes around the table names and field names, to avoid SQL errors when
        using names with, for instance, capital letters.
        Bug #375605 from William Manley.

This is the glom-1-2 branch. See the HEAD branch for new features.

1.2.0:

2006-10-18  Murray Cumming  <murrayc@murrayc.com>

	* examples/example_film_manager.glom: Mark this as an example, so users are 
	asked to save a copy. I think this had example data once too, but it is gone 
	now.

2006-10-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/dialog_layout_list.cc:
	* glom/mode_data/dialog_layout_list.h: Remove warn_about_images() 
	and don't use it in on_button_add_field() and on_button_edit_field().
	* glom/utility_widgets/imageglom.cc: