@@ -1,3 +1,10 @@
+2006-12-07  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/mode_data/box_data.cc: get_related_record_exists():
+	* glom/mode_data/box_data_list_related.cc: refresh_data_from_database():
+	In WHERE clauses, specify the table name, to avoid ambiguity when two of 
+	the tables have the same field names. This avoids a SQL error. 
+
 2006-12-03  Murray Cumming  <murrayc@murrayc.com>
 
 	* glom/mode_data/box_data_list.cc: create_layout_add_group(): Check that fields 
